Fix: Image is not visible

--- a/amazon.css
+++ b/amazon.css
@@ -249,3 +249,24 @@ h2{
 .foot-panel2 p:hover{ 
     color:white;
 }
+.box4_img{
+    background-image: url("./amazon img/box4_image.jpg");
+}
+.box5_img{
+    background-image: url("./amazon img/box5_image.jpg");
+}
+.box1_img{
+    background-image: url("./amazon img/box1_image.jpg");
+}
+.box3_img{
+    background-image: url("./amazon img/box3_image.jpg");
+}
+.box6_img{
+    background-image: url("./amazon img/box6_image.jpg");
+}
+.box7_img{
+    background-image: url("./amazon img/box7_image.jpg");
+}
+.box8_img{
+    background-image: url("./amazon img/box8_image.jpg");
+}
